refactor: remove Canadian pipeline and enforce US-only SimFin ingestion

--- a/.env.prod
+++ b/.env.prod
@@ -15,5 +15,5 @@ SIMFIN_BATCH_SIZE=100
 # Location of SimFin CSVs
 SIMFIN_DATA_DIR=data
 
-# Comma-separated list of Canadian tickers (TSX/TSXV) – edit as needed
-CA_TICKERS=FILE
+# SimFin market (US-only pipeline)
+SIMFIN_MARKET=us
