--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,11 @@
-# Development environment
-DB_HOST=your-dev-db-host
+# LookThroughProfits-Dev (Supabase)
+DB_HOST=db.vzytznpmxesxcipiewyk.supabase.co
 DB_PORT=5432
-DB_NAME=your-dev-db-name
-DB_USER=your-dev-db-user
-DB_PASSWORD=your-dev-db-password
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=cwrizzJGxzVopRn0
 
-SIMFIN_API_KEY=your-simfin-api-key
+SIMFIN_API_KEY=YOUR_SIMFIN_API_KEY
 
 # Optional
 SIMFIN_MARKET=us
