--- a/.env.prod
+++ b/.env.prod
@@ -1,19 +1,16 @@
-# Supabase Postgres connection
-DB_HOST=aws-0-us-east-1.pooler.supabase.com
+# LookThroughProfits-Prod (Supabase)
+DB_HOST=db.hlbkbudxumabzwsalzbz.supabase.co
 DB_PORT=5432
 DB_NAME=postgres
-DB_USER=postgres.ioggynmosufvlozhlhta
-DB_PASSWORD=dXXIsZBITAGrQhFL
+DB_USER=postgres
+DB_PASSWORD=Fr91dXr0JpbwJ48n
 
-# SimFin API key for stock price data
-# Get your free API key at: https://simfin.com/
-SIMFIN_API_KEY=2d493187-d70a-49be-a732-786a83a7df7e
+SIMFIN_API_KEY=YOUR_SIMFIN_API_KEY
 
-# SimFin batch size for price requests (default: 100)
-SIMFIN_BATCH_SIZE=100
-
-# Location of SimFin CSVs
-SIMFIN_DATA_DIR=data
-
-# SimFin market (US-only pipeline)
+# Optional
 SIMFIN_MARKET=us
+SIMFIN_PRICES_VARIANT=latest
+SIMFIN_INSERT_BATCH=1000
+PRICES_INSERT_BATCH=1000
+ORCH_MAX_ERRORS=3
+LOG_LEVEL=INFO
