--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
 # LookThroughProfits-Prod (Supabase)
-DB_HOST=db.hlbkbudxumabzwsalzbz.supabase.co
+DB_HOST=aws-1-us-east-1.pooler.supabase.com
 DB_PORT=5432
 DB_NAME=postgres
-DB_USER=postgres
+DB_USER=postgres.hlbkbudxumabzwsalzbz
 DB_PASSWORD=Fr91dXr0JpbwJ48n
 
 SIMFIN_API_KEY=2d493187-d70a-49be-a732-786a83a7df7e
