--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,8 @@
 # LookThroughProfits-Dev (Supabase)
-DB_HOST=db.vzytznpmxesxcipiewyk.supabase.co
+DB_HOST=aws-1-us-east-1.pooler.supabase.com
 DB_PORT=5432
 DB_NAME=postgres
-DB_USER=postgres
+DB_USER=postgres.vzytznpmxesxcipiewyk
 DB_PASSWORD=cwrizzJGxzVopRn0
 
 SIMFIN_API_KEY=2d493187-d70a-49be-a732-786a83a7df7e
